fix: fix picture pox alignment and size issues

--- a/frontend-angular/src/app/core/picture-upload/picture-upload.scss
+++ b/frontend-angular/src/app/core/picture-upload/picture-upload.scss
@@ -3,7 +3,7 @@
 .picture-box {
   cursor: pointer;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
-  margin: 1.2rem auto 1.5rem;
+  margin: 1.2rem auto 2.5rem;
   border: 2px dashed $asobo-purple;
   border-radius: 50%;
   background-color: color-mix(in srgb, $asobo-purple 7%, transparent);
